--- a/WebApplication1/WebApplication1/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/ExternalLoginConfirmation.cshtml
@@ -8,35 +8,65 @@
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-
-    <h4>Association Form</h4>
+    <h4>Register - Create a new account.</h4>
     <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <p class="text-info">
-        You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-        Please enter a user name for this site below and click the Register button to finish
-        logging in.
-    </p>
+    @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.firstname, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.firstname, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Hometown, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.lastname, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Hometown, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.lastname, new { @class = "form-control" })
         </div>
-    </div>    
+    </div>
+
+    @*<div class="form-group">
+            @Html.LabelFor(m => m.Hometown, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.EditorFor(m => m.Hometown, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Hometown, "", new { })
+            </div>
+        </div>*@
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.birthday, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(m => m.birthday, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.description, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(m => m.description, new { @class = "form-control", rows = "5" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.ImageUpload, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <span class="form-group">
+                <input type="file" accept="image/*" aria-label="photo" name="ImageUpload" id="ImageUpload" />
+            </span>
+        </div>
+    </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
