--- a/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
@@ -56,7 +56,7 @@
                     'id': $("#city").val(),
                     'name': $("#name").val()
                 });
-                function ajax(e) {
+                function ajax() {
                     jQuery.ajax({
                         type: "GET",
                         url: "/Home/GetView",
