--- a/WebApplication1/WebApplication1/Views/Event/ViewEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/ViewEvent.cshtml
@@ -9,12 +9,6 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ViewEvent</title>
-    <script src="bootstrap.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-    <!-- Include Required Prerequisites -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -23,7 +17,7 @@
         @Styles.Render("~/Content/bootstrapcss")    }
 </head>
 <body>
-    <div class="card" style="width:80%; left:10%; right:10%; margin-top:50px">
+    @*<div class="card" style="width:80%; left:10%; right:10%; margin-top:50px">
         <div class="row">
             <div class="center">
                 <div class="col-lg-9 center-block">
@@ -77,7 +71,7 @@
             @Html.ActionLink("Edit", "EditEvent", new { id = Model.ev.EventId }) |
             @Html.ActionLink("Home", "../")
         </div>
-    </div>
+    </div>*@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
