--- a/WebApplication1/WebApplication1/Views/Home/_events.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_events.cshtml
@@ -15,7 +15,7 @@
 
 <body>
     <div>
-        <h2 style="margin-top:100px;">Events</h2>
+        <h2 style="margin-top:100px;">Search Results</h2>
         <hr />
 
         <div class="container" style="padding-right:50px;">
