--- a/WebApplication1/WebApplication1/Views/Home/_Event.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Event.cshtml
@@ -12,7 +12,7 @@
         <div class="caption">
             <h4 class="pull-right">€@Html.DisplayFor(ModelItem => Model.ev.EventPrice)</h4>
             <h4>
-                <a href='@string.Format("../Event/ViewEvent/{0}", Model.ev.EventId)'>@Html.DisplayFor(ModelItem => Model.ev.EventName)</a>
+                @Html.ActionLink(Model.ev.EventName, "EventDetails", "Event", Model.ev.EventId)
             </h4>
             <p style="margin-bottom:5px">@Html.DisplayFor(ModelItem => Model.ev.EventLocation)</p>
             <span>
@@ -63,10 +63,6 @@
 
                 <button type="button" id=@string.Format("intrested{0}", Model.ev.EventId) class="btn btn-sm" style="border-radius:80%">
                     <span id=@string.Format("i{0}", Model.ev.EventId) class="glyphicon @(@Model.log.Interested ? "glyphicon-star" : "glyphicon-star-empty") " title="Intrested" style="color:black"></span>
-                </button>
-
-                <button type="button" id=@string.Format("notification{0}", Model.ev.EventId) class="btn btn-sm" style="border-radius:80%">
-                    <span id=@string.Format("n{0}", Model.ev.EventId) class="glyphicon glyphicon-bell" title="Notification" style="color:black"></span>
                 </button>
 
 
@@ -121,15 +117,7 @@
                                 }
                             });
                         });
-                       
-                        @* $('#@string.Format("notification{0}", Model.ev.EventId)').click(function () {
-                            if ($('#@string.Format("notification{0}", Model.ev.EventId)').css("color") == black) {
-                                $('#@string.Format("notification{0}", Model.ev.EventId)').html('<span class="glyphicon glyphicon-bell" style="color:#3b5998"></span>');
-                            }
-                            else {
-                                $('#@string.Format("notification{0}", Model.ev.EventId)').html('<span class="glyphicon glyphicon-bell" style="color:black"></span>');
-                            }
-                        });*@
+                 
                     });
                 </script>
             </p>
