--- a/WebApplication1/WebApplication1/Views/Event/EventDetails.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/EventDetails.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "View Event";
 }
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ViewEvent</title>
-
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @section Scripts {
@@ -73,7 +71,6 @@
                             </div>
                         </div>
                     </div>
-
                     <script>
                         function initMap() {
                             var mapCanvas = document.getElementById("map");
@@ -117,14 +114,60 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <button id="participants" class="btn-sm glyphicon glyphicon-plus" style="border-radius:50%"></button>
-                    <button id="intrested" class="btn-sm glyphicon glyphicon-star-empty" style="border-radius:50%"></button>
-                    <button id="notification" class="btn-sm glyphicon glyphicon-bell" style="border-radius:50%"></button>
-                    <button id="share" class="btn-sm glyphicon glyphicon-share" style="border-radius:50%"></button>
+                    <button type="button" id="participants" class="btn btn-sm" style="border-radius:80%">
+                        @{
+                            var going = Model.log.Going;
+                        }
+                        <span id="p" class="glyphicon @(going ? "glyphicon-ok" : "glyphicon-plus")" title="Participate" style="color:black"></span>
+                    </button>
+                    <button type="button" id="intrested" class="btn btn-sm" style="border-radius:80%">
+                        <span id="i" class="glyphicon @(Model.log.Interested ? "glyphicon-star" : "glyphicon-star-empty")" title="Intrested" style="color:black"></span>
+                    </button>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        $(function () {
+            $('#participants').click(function () {
+                if ($('#p').hasClass('glyphicon-plus')) {
+                    $('#p').removeClass('glyphicon-plus')
+                    $('#p').addClass('glyphicon-ok')
+                    $('#participants').html('<span id="p") class="glyphicon glyphicon-ok" style="color:#3b5998"></span>');
+                }
+                else {
+                    $(p).removeClass('glyphicon-ok')
+                    $(p).addClass('glyphicon-plus')
+                    $('#participants').html('<span id="p" class="glyphicon glyphicon-plus" style="color:black"></span>');
+                }
+
+                jQuery.ajax({
+                    url: "/Account/participate",
+                    data: { id: @Model.ev.EventId },
+                    success: function(viewHTML) {
+                    }
+                });
+            });
+            $('#intrested').click(function () {
+                if ($('#i').hasClass('glyphicon-star-empty')) {
+                    $('#i').removeClass('glyphicon-star-empty')
+                    $('#i').addClass('glyphicon-star')
+                    $('#intrested').html('<span id="i" class="glyphicon glyphicon-star" style="color:#3b5998"></span>');
+                }
+                else {
+                    $('#i').removeClass('glyphicon-star')
+                    $('#i').addClass('glyphicon-star-empty')
+                    $('#intrested').html('<span id="i" class="glyphicon glyphicon-star-empty" style="color:black"></span>');
+                }
+                jQuery.ajax({
+                    url: "/Account/interested",
+                    data: { id: @Model.ev.EventId },
+                    success: function(viewHTML) {
+                    }
+                });
+            })
+        })
+    </script>
 
     <div class="card-footer text-muted text-xs-center">
         @Html.ActionLink("Edit", "EditEvent", new { id = Model.ev.EventId }) |
