New profile lay out

--- a/WebApplication1/WebApplication1/Views/Account/CheckIns.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/CheckIns.cshtml
@@ -1,5 +1,17 @@
 ﻿
+@Model WebApplication1.Models.Event
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" HtmlEncode="false" />
+    <title>ViewEvent</title>
+
+</head>
 <body style="margin-top:50px">
+    <div id="viewPlaceHolder"> @Html.Partial("_Events", Model)</div>
+
+
 
 </body>
 
+</html>
