--- a/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,7 @@
                     <li class="itemMenu">@Html.ActionLink("My Profile", "Profile","Account", new { idUser = User.Identity.GetUserId()}, null)</li>
                     <li class="itemMenu">@Html.ActionLink("My checkins", "CheckIns", "Account", null, null)</li>
                     <li class="itemMenu">@Html.ActionLink("My events", "YourEvents", "Account", null, null)</li>
+                    <li class="itemMenu">@Html.ActionLink("Create Event", "CreateEvent", "Event", null, null)</li>
                     <li class="itemMenu">@Html.ActionLink("Settings", "Settings", "Account", null, null)</li>
                 </ul>
             </li>
