--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Register";
 }
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" , enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <h4>Register - Create a new account.</h4>
@@ -43,14 +43,6 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-        @Html.LabelFor(m => m.Hometown, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Hometown, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Hometown, "", new { })
-        </div>
-    </div>*@
-
     <div class="form-group">
         @Html.LabelFor(m => m.birthday, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -64,14 +56,12 @@
             @Html.TextAreaFor(m => m.description, new { @class = "form-control", rows = "5" })
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ImageUpload, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            <span class="form-group">
-                <input type="file" accept="image/*" aria-label="photo" name="ImageUpload" id="ImageUpload" />
-            </span>
-        </div>
+
+    <div style="margin-left:135px; margin-bottom:10px" class="form-inline">
+        <span class="form-group"><label>Profile pic</label></span>
+        <span class="form-group" style="margin-left:40px"><input type="file" accept="image/*" aria-label="photo" name="ImageUpload" id="ImageUpload" /></span>
     </div>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
@@ -81,17 +71,6 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk"></script>
-    <script type="text/javascript">
-        google.maps.event.addDomListener(input, 'keydown', function (e) {
-            if (e.keyCode == 13) {
-                e.preventDefault();
-            }
-        });
-        google.maps.event.addDomListener(window, 'load', function () {
-            var input = document.getElementById('Hometown');
-            var places = new google.maps.places.Autocomplete(input)
-        });
-    </script>
+   
 
 }
