--- a/WebApplication1/WebApplication1/Views/Account/Settings.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Settings.cshtml
@@ -13,9 +13,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body style="margin-top:50px">
-    @using (Html.BeginForm("Settings", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form", style = "margin-top:50px" }))
+    @using (Html.BeginForm("Settings", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form", style = "margin-top:50px",  enctype = "multipart/form-data" }))
     {
-       
+
         @Html.AntiForgeryToken()
         <hr />
         @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -33,14 +33,6 @@
                 @Html.TextBox("lastname", Model.lastname, new { @class = "form-control" })
             </div>
         </div>
-
-            @*<div class="form-group">
-                @Html.LabelFor(m => m.Hometown, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.EditorFor(m => m.Hometown, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(m => m.Hometown, "", new { })
-                </div>
-            </div>*@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.birthday, new { @class = "col-md-2 control-label" })
