--- a/WebApplication1/WebApplication1/Views/Account/YourEvents.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/YourEvents.cshtml
@@ -1,5 +1,16 @@
 ﻿
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" HtmlEncode="false" />
+    <title>ViewEvent</title>
+
+</head>
 <body style="margin-top:50px">
+    <div id="viewPlaceHolder"> @Html.Partial("_Events", Model)</div>
+    
+
 
 </body>
 
+</html>
