--- a/WebApplication1/WebApplication1/Views/Account/YourEvents.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/YourEvents.cshtml
@@ -26,7 +26,7 @@
                     <script>
                     jQuery.ajax({
                     type: "GET",
-                    url: "/Event/ViewEvent",
+                    url: "/Event/ShowEvent",
                     data: { id: @item.EventId },
                         success: function(viewHTML) {
                             $("#eventRow").append(viewHTML);
